--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <script defer src="strtable.js"></script>
     <script defer src="exception.js"></script>
     <script defer src="Extractor.js"></script>
@@ -12,13 +13,6 @@
     <script defer src="path.js"></script>
     <script defer src="main.js" onload="main()"></script>
     <title>Redirecting...</title>
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 2em;
-        margin: 2em;
-      }
-    </style>
   </head>
   <body>
     <noscript><b>(!) Enable JavaScript for redirecting.</b></noscript>
